Improve string handling to include quotes